[tool.poetry]
name = "SkyPro"
version = "0.1.0"
description = "Проект для домашнего задания"
authors = ["Vova Almazkin <vladimiralmazkin3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
markdown = "^3.7"
python-dotenv = "^1.1.0"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest-cov = "^6.0.0"
pytest = "^8.3.4"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"